// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout should match previous snapshot 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  staticContext={Object {}}
>
  <MainLayout>
    <p>
      Hello, world!
    </p>
  </MainLayout>
</Router>
`;

exports[`MainLayout should match previous snapshot with no-padding requirement 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "29pivc",
          "pathname": "/subjects/create",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "29pivc",
        "pathname": "/subjects/create",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <MainLayout>
    <p>
      Hello, world!
    </p>
  </MainLayout>
</Router>
`;
